# unthinking-majority-website

./: .gitignore  2023_Year_Review.txt  CHANGELOG.md  LICENSE  Procfile  README.md  diamond_list.csv  emojis.txt  manage.py  package-lock.json  pyproject.toml  requirements.txt  setup.md
account/: __init__.py  admin.py  autocomplete.py  forms.py  managers.py  models.py  urls.py  views.py
account/api/: serializers.py  urls.py  viewsets.py
account/migrations/: 0001_initial.py  0002_account_icon.py  0003_alter_account_user.py  0004_alter_account_user.py  0005_alter_account_name.py  0006_remove_account_icon.py  0007_alter_petownership_date.py  0008_delete_petownership.py  0009_account_col_logs.py  0010_account_active.py  0011_account_combat_achievement_tier.py  0012_remove_account_col_logs_and_more.py  0013_account_rank.py  0014_rename_active_account_is_active.py  0015_accountcreationsubmission.py  0016_rename_accountcreationsubmission_usercreationsubmission.py  0017_account_is_alt.py  0018_account_preferred_name.py  0019_remove_account_is_alt.py  0020_account_discord_id.py  0021_populate_discord_id_20240818_2331.py  0022_alter_account_discord_id.py
account/urls/: autocomplete_urls.py  urls.py
achievements/: __init__.py  admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
achievements/api/: serializers.py  urls.py  viewsets.py
achievements/migrations/: 0001_initial.py  0002_migrate_submissions_20230214_1940.py  0003_alter_casubmission_account_and_more.py  0004_alter_basesubmission_options.py  0005_alter_casubmission_ca_tier.py  0006_basesubmission_denial_notes.py  0007_alter_collogsubmission_col_logs.py  0008_basesubmission_polymorphic_ctype.py  0009_populate_polymorphic_ctype_id_20231027_1835.py  0010_alter_casubmission_ca_tier.py  0011_alter_basesubmission_proof.py  0012_alter_collogsubmission_col_logs.py  0013_alter_collogsubmission_col_logs.py  0014_alter_basesubmission_proof.py  0015_hiscores.py  0016_alter_hiscores_options.py  0017_alter_hiscores_unique_together.py  0018_recordsubmission_bounty_accepted.py  0019_alter_hiscores_options_and_more.py
bounty/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
bounty/admin/: __init__.py  admin.py  inlines.py
bounty/migrations/: 0001_initial.py  0002_alter_bounty_options_bounty_prize_pool.py  0003_bounty_title.py  0004_bounty_bounty_reason.py  0005_extrabountyreward.py  0006_bounty_event_phrase.py  0007_alter_extrabountyreward_bounty.py  (+2 more)
dragonstone/: __init__.py  admin.py  apps.py  forms.py  managers.py  models.py  urls.py  views.py
main/: __init__.py  admin.py  apps.py  autcomplete_filters.py  autocomplete.py  autocomplete_filters.py  blocks.py  config.py  fields.py  forms.py  functions.py  image_formats.py  managers.py  models.py  signals.py  urls.py  views.py  widgets.py
templates/: 403.html  404.html  500.html
um/: admin.py  functions.py  settings.py  urls.py  wsgi.py
(+325 files in other folders)
