[project]
name = "um"
version = "0.1.0"
description = "Website for the OSRS clan Unthinking Majority."
authors = [{ name = "Ciaran Sanders", email = "ciaransanders@gmail.com" }]
readme = "README.md"
requires-python = "~3.12"

[tool.poetry.dependencies]
boto3 = "~1.40"
dj-database-url = "~3.0.1"
# django-admin-autocomplete-filter is old and unmaintained, would like to get rid of it someday
django-admin-autocomplete-filter = "^0.7"
django-extensions = "~4.1"
django-filter = "^25.1"
django-formtools = "~2.5.1"
django-notifications-hq = { git = "https://github.com/django-notifications/django-notifications", rev = "4c44bcea2504d9a3fcd26366b232a13732a08f2a" }
django-polymorphic = "~4.1.0"
djangorestframework = "~3.16.1"
django-storages = "~1.14.6"
django-tailwind = "~4.2.0"
django = "~5.2.0"
gunicorn = "^22.0.0"
pillow = "~11.3.0"
psycopg2 = "~2.9.10"
requests = "~2.32.5"
sentry-sdk = "~2.39.0"
wheel = "~0.45.1"
whitenoise = "~6.11.0"
wagtail = "~7.0.0"
Wand = "~0.6.12"
aiohttp = "~3.12.15"
django-adminactions = "~2.4.0"

[tool.poetry.group.dev.dependencies]
django-browser-reload = "^1.21.0"
django-debug-toolbar = "^6.0.0"
black = { extras = ["d"], version = "^25.9.0" }
ipython = "^9.6"
pre-commit = "^4.3.0"
django-stubs = "^5.2.5"
django-types = "^0.22.0"
djlint = "^1.36.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
classifiers = ["Private :: Do not Upload"]

[tool.pyright]
extraPaths = ["."]
django-stubs = true
typeCheckingMode = "off"
reportMissingTypeStubs = false
reportOptionalMemberAccess = false
reportGeneralTypeIssues = false
reportReturnType = false
pythonPlatform = "Linux"

[tool.django-stubs]
django_settings_module = "MainApplication.settings"
